[tool.poetry]
name = "labctrl"
version = "0.1.0"
description = ""
authors = ["Atharv Joshi <atharvjoshi@ymail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "^1.21.3"
PyYAML = "^6.0"
PyVISA = "^1.11.3"
PyVISA-py = "^0.5.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
Sphinx = "^4.2.0"
black = "^21.9b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
